dependencies {
    apply plugin: 'groovy'
    apply plugin: 'application'
    compile 'org.codehaus.groovy:groovy-all:2.3.8'
}

version = '1.0'
mainClassName='MazeBot.MazeRunner'

sourceCompatibility = 1.7
version = '1.0'

repositories {
    mavenCentral()
}

task wrapper(type: Wrapper) {
    gradleVersion = '2.2.1'
}

jar {
    manifest {
        attributes 'Main-Class': mainClassName
    }
}

tasks.withType(GroovyCompile) {
    configure(groovyOptions.forkOptions) {
        memoryMaximumSize = '512m'
        jvmArgs = ['-XX:MaxPermSize=128m', '-Xms128m', '-Xmx256m']
    }
}